# Palworld-Pal-Editor

./: .gitignore  MANIFEST.in  README.cn.md  README.md  build_and_run_docker.sh  build_executable.ps1  build_executable.sh  cx_freeze_build.py  pypi_publish.ps1  pypi_publish.sh  pyproject.toml  requirements.txt  setup_and_run.ps1  setup_and_run.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: Build.yml  Dev Build.yml  Main Build.yml  dev-build.yml  dev-release.yml  release-build.yml  release-ghcr.yml
docker/: .dockerignore  Dockerfile  app.sh  docker-compose.yml  entrypoint.sh  sample-docker-compose.yml
frontend/palworld-pal-editor-webui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.js.timestamp-1709375631679-074be00e30baa.mjs  vite.config.ts
frontend/palworld-pal-editor-webui/src/: App.vue  main.js
frontend/palworld-pal-editor-webui/src/assets/: base.css  main.css
frontend/palworld-pal-editor-webui/src/components/:  LoadingIndicator.vue  OptionMenu.vue  PalEditor.vue  PalList.vue  PathPicker.vue  PlayerList.vue  TopBar.vue
frontend/palworld-pal-editor-webui/src/components/modules/: BarButton.vue  IconButton.vue  InputArea.vue
frontend/palworld-pal-editor-webui/src/i18n/: en.js  fr.js  ja.js  zh-CN.js  zh-TW.js
frontend/palworld-pal-editor-webui/src/router/: index.js
frontend/palworld-pal-editor-webui/src/stores/: paleditor.js
frontend/palworld-pal-editor-webui/src/views/: AboutView.vue  AuthView.vue  EditorView.vue  EntryView.vue  HomeView.vue
save_data_re/: A18B721D0s.sav.json  BaseCampSaveData.json  CharacterParameterStorageSaveData.json  GroupSaveDataMap.json  Sheepball.json  notes.md  paldata_0.2.json
src/palworld_pal_editor/: __init__.py  __main__.py  character_container.py  cli.py  config.py  data_provider.py  gui.py  pal_entity.py  pal_objects.py  player_entity.py  readonly_data.py  save_manager.py  webui.py
src/palworld_pal_editor/api/: README.md  __init__.py  auth.py  pal.py  player.py  save.py  util.py
src/palworld_pal_editor/assets/data/: get_attacks.py  gui_i18n.json  i18n_list.json  old_pal_attacks.json  pal_attacks.json  pal_data.json  pal_exp_table.json  pal_passives.json  pal_xp_thresholds.json  pal_xp_thresholds_max.json  update_attacks.py  update_pals.py
src/palworld_pal_editor/core/: __init__.py  base_camp_data.py  basecamp_data.py  container_data.py  group_data.py  pal_container.py  pal_entity.py  pal_objects.py  player_entity.py  save_manager.py
src/palworld_pal_editor/utils/: __init__.py  data_provider.py  logger.py  util.py
src/palworld_pal_editor/webui/: README.md  index.html  manifest.webmanifest  sw.js
src/palworld_pal_editor/webui/assets/: AboutView-B_c_2Aod.js  index-BJlSJUvX.js  index-BWVKvNal.css  index-BWw9HjJ-.css  index-DHkf_z5J.js
tests/: test_save_manager.py  tests.py
