[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palworld-pal-editor"
description = "Yet Another Palworld Pal Editor."
authors = [
    { name = "_connlost", email = "4348524953.h@gmail.com" },
]
keywords = ["palworld", "editor", "pal"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
readme = "README.md"
version = "0.4.1.post2"
dependencies = [
    "setuptools==69.1.0",
    "palworld_save_tools==0.19.0",
    "wheel==0.42.0",
    "Flask==3.0.2",
    "pyinstaller==6.4.0",
    "waitress==3.0.0",
    "Flask-JWT-Extended==4.6.0",
    "pywebview==4.4.1",
    "requests==2.31.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)", "Natural Language :: English", "Natural Language :: Japanese"
]

[project.urls]
Homepage = "https://github.com/KrisCris/Palworld-Pal-Editor"
Documentation = "https://github.com/KrisCris/Palworld-Pal-Editor"
Repository = "https://github.com/KrisCris/Palworld-Pal-Editor.git"
Issues = "https://github.com/KrisCris/Palworld-Pal-Editor/issues"
Changelog = "https://github.com/KrisCris/Palworld-Pal-Editor"